<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/actionToggleValues"
        android:title="@string/actionToggleValues" />
    <item
        android:id="@+id/actionToggleFilled"
        android:title="@string/actionToggleFilled" />
    <item
        android:id="@+id/actionToggleCircles"
        android:title="@string/actionToggleCircles" />
    <item
        android:id="@+id/actionToggleCubic"
        android:title="@string/actionToggleCubic" />
    <item
        android:id="@+id/actionToggleStepped"
        android:title="@string/ActionToggleStepped" />
    <item
        android:id="@+id/actionToggleHorizontalCubic"
        android:title="@string/actionToggleHorizontalCubic" />
    <item
        android:id="@+id/actionTogglePinch"
        android:title="@string/actionTogglePinch" />
    <item
        android:id="@+id/animateX"
        android:title="@string/animateX" />
    <item
        android:id="@+id/animateY"
        android:title="@string/animateY" />
    <item
        android:id="@+id/animateXY"
        android:title="@string/animateXY" />
    <item
        android:id="@+id/home"
        android:icon="@drawable/ic_outline_home_24"
        android:title="@string/home"
        app:showAsAction="always" />
    <item
        android:id="@+id/graphSave"
        android:icon="@drawable/ic_outline_savegraph"
        android:title="@string/graphSave"
        app:showAsAction="always" />
    <item
        android:id="@+id/dataSave"
        android:icon="@drawable/ic_outline_savedata"
        android:title="@string/dataSave"
        app:showAsAction="always" />



</menu>