<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="@dimen/MainActivityImageWidth"
        android:layout_height="@dimen/MainActivityImageHeight"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="@dimen/pidLogo"
        android:layout_marginTop="@dimen/pidLogo"
        android:layout_marginEnd="@dimen/pidLogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/worldbank"
        tools:ignore="ContentDescription" />

    <Button
        android:id="@+id/btnCountry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/pidButton"
        android:layout_marginTop="@dimen/pidLogo"
        android:layout_marginEnd="@dimen/pidButton"
        android:text="@string/buttonCountry"
        android:textSize="@dimen/ButtonTextSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/btnArg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/pidButton"
        android:layout_marginTop="@dimen/pidButton"
        android:layout_marginEnd="@dimen/pidButton"
        android:text="@string/buttonArg"
        android:textSize="@dimen/ButtonTextSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCountry" />

    <Button
        android:id="@+id/btnFavorites"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/pidButton"
        android:layout_marginTop="@dimen/pidButton"
        android:layout_marginEnd="@dimen/pidButton"
        android:text="@string/buttonFavorites"
        android:textSize="@dimen/ButtonTextSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnArg" />

    <TextView
        android:id="@+id/tvPowered"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/pidButton"
        android:autoLink="all"
        android:linksClickable="false"
        android:text="@string/powered_by"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>